--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^6.1.2",
-    "aos": "^2.3.4",
-    "json-server": "^0.17.1",
-    "nuxt": "3.0.0-rc.12"
+    "nuxt": "3.1.2",
+    "aos": "^2.3.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
