--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/tailwindcss": "^6.1.2",
+    "@nuxtjs/tailwindcss": "^6.10.3",
     "aos": "^2.3.4",
-    "nuxt": "3.1.2",
+    "defu": "^6.1.3",
+    "nuxt": "^3.9.0",
+    "sass": "^1.69.6",
     "vue-range-slider": "^0.6.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@nuxt/image": "^1.1.0",
     "aos": "^2.3.4"
   }
 }
